--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -10,13 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_id': '37150610', 'username': 'Victor Roman', 'wants_news': 1, 'active': 1, 'created_at': '2025-09-29 21:48:33', 'updated_at': '2025-09-29 21:48:33'}\n",
-      "{'user_id': '1021945174', 'username': 'Alberto Salcedo', 'wants_news': 1, 'active': 1, 'created_at': '2025-09-29 21:48:33', 'updated_at': '2025-09-29 21:48:33'}\n",
-      "{'channel_id': 1, 'channel_handle': '@JoseLuisCavatv', 'channel_name': 'José Luis Cava TV', 'language': 'es', 'check_start_hour': 10, 'check_start_minute': 30, 'check_end_hour': 14, 'check_interval_minutes': 3, 'active': 1, 'created_at': '2025-09-29 21:48:33'}\n",
-      "{'channel_id': 2, 'channel_handle': '@nacho_ic', 'channel_name': 'Nacho IC', 'language': 'es', 'check_start_hour': 12, 'check_start_minute': 15, 'check_end_hour': 16, 'check_interval_minutes': 3, 'active': 1, 'created_at': '2025-09-29 21:48:33'}\n",
-      "{'channel_id': 3, 'channel_handle': '@juanrallo', 'channel_name': 'Juan Rallo', 'language': 'es', 'check_start_hour': 10, 'check_start_minute': 0, 'check_end_hour': 0, 'check_interval_minutes': 5, 'active': 1, 'created_at': '2025-09-29 21:48:33'}\n",
-      "{'channel_id': 4, 'channel_handle': '@bravosresearchcrypto', 'channel_name': 'Bravos Crypto Research', 'language': 'en', 'check_start_hour': 10, 'check_start_minute': 0, 'check_end_hour': 21, 'check_interval_minutes': 5, 'active': 1, 'created_at': '2025-09-29 21:48:33'}\n",
-      "{'channel_id': 5, 'channel_handle': '@bravosresearch', 'channel_name': 'Bravos Research', 'language': 'en', 'check_start_hour': 10, 'check_start_minute': 0, 'check_end_hour': 21, 'check_interval_minutes': 5, 'active': 1, 'created_at': '2025-09-29 21:48:33'}\n"
+      "{'user_id': '37150610', 'username': 'Victor Roman', 'wants_news': 1, 'active': 1, 'created_at': '2025-10-01 06:23:37', 'updated_at': '2025-10-01 06:23:37'}\n",
+      "{'user_id': '1021945174', 'username': 'Alberto Salcedo', 'wants_news': 1, 'active': 1, 'created_at': '2025-10-01 06:23:37', 'updated_at': '2025-10-01 06:23:37'}\n",
+      "{'channel_id': 1, 'channel_handle': '@JoseLuisCavatv', 'channel_name': 'José Luis Cava TV', 'youtube_channel_id': 'UCvCCLJkQpRg0NdT3zNcI08A', 'language': 'es', 'check_start_hour': 8, 'check_start_minute': 30, 'check_end_hour': 14, 'check_interval_minutes': 3, 'active': 1, 'created_at': '2025-10-01 06:23:37'}\n",
+      "{'channel_id': 2, 'channel_handle': '@nacho_ic', 'channel_name': 'Nacho IC', 'youtube_channel_id': 'UCZLtNl1TyvNJ9K8OYKT43Cw', 'language': 'es', 'check_start_hour': 12, 'check_start_minute': 15, 'check_end_hour': 16, 'check_interval_minutes': 3, 'active': 1, 'created_at': '2025-10-01 06:23:37'}\n",
+      "{'channel_id': 3, 'channel_handle': '@juanrallo', 'channel_name': 'Juan Rallo', 'youtube_channel_id': 'UCBLCvUUCiSqBCEc-TqZ9rGw', 'language': 'es', 'check_start_hour': 8, 'check_start_minute': 0, 'check_end_hour': 22, 'check_interval_minutes': 5, 'active': 1, 'created_at': '2025-10-01 06:23:37'}\n",
+      "{'channel_id': 4, 'channel_handle': '@bravosresearchcrypto', 'channel_name': 'Bravos Crypto Research', 'youtube_channel_id': 'UC9jTdAaVgvRjhU0gl5LWoZg', 'language': 'en', 'check_start_hour': 8, 'check_start_minute': 0, 'check_end_hour': 22, 'check_interval_minutes': 5, 'active': 1, 'created_at': '2025-10-01 06:23:37'}\n",
+      "{'channel_id': 5, 'channel_handle': '@bravosresearch', 'channel_name': 'Bravos Research', 'youtube_channel_id': 'UCOHxDwCcOzBaLkeTazanwcw', 'language': 'en', 'check_start_hour': 8, 'check_start_minute': 0, 'check_end_hour': 22, 'check_interval_minutes': 5, 'active': 1, 'created_at': '2025-10-01 06:23:37'}\n"
      ]
     }
    ],
