--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -44,8 +44,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4259c575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = {'ok': True, 'result': [{'update_id': 887620313, 'message': {'message_id': 139, 'from': {'id': 37150610, 'is_bot': False, 'first_name': 'Victor', 'last_name': 'Roman', 'language_code': 'es'}, 'chat': {'id': 37150610, 'first_name': 'Victor', 'last_name': 'Roman', 'type': 'private'}, 'date': 1759582647, 'text': 'Hey'}}, {'update_id': 887620314, 'message': {'message_id': 141, 'from': {'id': 37150610, 'is_bot': False, 'first_name': 'Victor', 'last_name': 'Roman', 'language_code': 'es'}, 'chat': {'id': 37150610, 'first_name': 'Victor', 'last_name': 'Roman', 'type': 'private'}, 'date': 1759582751, 'text': 'https://youtu.be/42FDBTya0m8?si=xkvOYdG8qYi1TsnC', 'entities': [{'offset': 0, 'length': 48, 'type': 'url'}], 'link_preview_options': {'url': 'https://youtu.be/42FDBTya0m8?si=xkvOYdG8qYi1TsnC'}}}, {'update_id': 887620315, 'message': {'message_id': 143, 'from': {'id': 5554994996, 'is_bot': False, 'first_name': 'Cynthia', 'language_code': 'es'}, 'chat': {'id': 5554994996, 'first_name': 'Cynthia', 'type': 'private'}, 'date': 1759599388, 'text': 'No'}}]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "663eb2b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Victor sent: Hey at 2025-10-04 14:57:27\n",
+      "User Victor sent: https://youtu.be/42FDBTya0m8?si=xkvOYdG8qYi1TsnC at 2025-10-04 14:59:11\n",
+      "User Cynthia sent: No at 2025-10-04 19:36:28\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "for item in response['result']:\n",
+    "    user = item['message']['from']\n",
+    "    message_id = item['message']['message_id']\n",
+    "    message_time_epoch = item['message']['date']\n",
+    "    # convert epoch to readable time\n",
+    "    message_time = time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(message_time_epoch))\n",
+    "    print(f\"User {user['first_name']} sent: {item['message']['text']} at {message_time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15ee2803",
    "metadata": {},
    "outputs": [],
    "source": []
