--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -44,12 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4259c575",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = {'ok': True, 'result': [{'update_id': 887620313, 'message': {'message_id': 139, 'from': {'id': 37150610, 'is_bot': False, 'first_name': 'Victor', 'last_name': 'Roman', 'language_code': 'es'}, 'chat': {'id': 37150610, 'first_name': 'Victor', 'last_name': 'Roman', 'type': 'private'}, 'date': 1759582647, 'text': 'Hey'}}, {'update_id': 887620314, 'message': {'message_id': 141, 'from': {'id': 37150610, 'is_bot': False, 'first_name': 'Victor', 'last_name': 'Roman', 'language_code': 'es'}, 'chat': {'id': 37150610, 'first_name': 'Victor', 'last_name': 'Roman', 'type': 'private'}, 'date': 1759582751, 'text': 'https://youtu.be/42FDBTya0m8?si=xkvOYdG8qYi1TsnC', 'entities': [{'offset': 0, 'length': 48, 'type': 'url'}], 'link_preview_options': {'url': 'https://youtu.be/42FDBTya0m8?si=xkvOYdG8qYi1TsnC'}}}, {'update_id': 887620315, 'message': {'message_id': 143, 'from': {'id': 5554994996, 'is_bot': False, 'first_name': 'Cynthia', 'language_code': 'es'}, 'chat': {'id': 5554994996, 'first_name': 'Cynthia', 'type': 'private'}, 'date': 1759599388, 'text': 'No'}}]}"
+    "from video_summary_bot.database import Database\n",
+    "db = Database()\n",
+    "db.add_user(user_id=\"5\", username=\"Sergio Vicens\")\n",
+    "db.subscribe_user_to_channel(\"123456789\", channel_id=1)"
    ]
   },
   {
